fixed synch layout issue

--- a/css/style.css
+++ b/css/style.css
@@ -49,3 +49,15 @@ form {
  .container {
   background-color: rgba(240, 60, 60, 0.8);
 }
+
+.small-pizza {
+  width: 25%;
+}
+
+.medium-pizza {
+  width: 33%;
+}
+
+.large-pizza {
+  width: 50%;
+}
